# ERM

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
script/: erm_geemap.ipynb  erm_stac.ipynb
