[project]
name = "erm-geemap"
version = "0.1.0"
description = "Extreme Rainfall Monitoring with Geemap"
authors = [
    {name = "User",email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "geemap (>=0.36.6,<0.37.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "netcdf4 (>=1.7.3,<2.0.0)",
    "h5netcdf (>=1.7.3,<2.0.0)",
    "earthaccess (>=0.15.1,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pystac-client (>=0.9.0,<0.10.0)",
    "stackstac (>=0.5.1,<0.6.0)",
    "planetary-computer (>=1.0.0,<2.0.0)",
    "rioxarray (>=0.15,<0.18)",
    "geopandas (>=1.1.1,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "exactextract (>=0.3.0,<0.4.0)",
    "requests (>=2.32.5,<3.0.0)",
    "geodatasets (>=2024.8.0,<2025.0.0)"
]

[tool.poetry]
package-mode = false
